src/components/Button/Button.module.css
.button {
    padding: var(--padding-md);
    font-size: var(--text-md);
    display: flex;
    align-items: center;
}

.button__img {
    width: 30px;
}

.button:disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

.button__primary {
    background-color: var(--bg-primary);
    color: var(--text-secondary);
}

.button__primary:hover {
    background-color: var(--hover-primary);
}

.button__secondary {
    background-color: var(--text-secondary);
    color: var(--bg-primary);
}

.button__secondary:hover {
    background-color: var(--hover-secondary);
}

.button__xs {
    padding: var(--padding-xs);
    font-size: var(--text-xs);
    column-gap: 3px;

    .button__img {
        width: 17px;
    }
}

.button__sm {
    padding: var(--padding-sm);
    font-size: var(--text-sm);

    column-gap: 5px;

    .button__img {
        width: 20px;
    }
}

.button__md {
    padding: var(--padding-md);
    font-size: var(--text-md);

    column-gap: 6px;

    .button__img {
        width: 22px;
    }
}

.button__lg {
    padding: var(--padding-lg);
    font-size: var(--text-lg);

    column-gap: 8px;

    .button__img {
        width: 25px;
    }
}

.button__xl {
    padding: var(--padding-xl);
    font-size: var(--text-xl);

    column-gap: 11px;

    .button__img {
        width: 30px;
    }
}

.button__border-none {
    border-radius: 0px;
}

.button__border-xs {
    border-radius: var(--radius-xs);
}

.button__border-sm {
    border-radius: var(--radius-sm);
}

.button__border-md {
    border-radius: var(--radius-md);
}

.button__border-lg {
    border-radius: var(--radius-lg);
}

.button__border-xl {
    border-radius: var(--radius-xl);
}

